Modified external api Models. Modified Exceptions. Added new ExternalApiException. Added models Year, Years and request for rest api. Created api, service and controller for external CarQueryApi.

--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,4 @@ $RECYCLE.BIN/
 # End of https://www.gitignore.io/api/java,linux,maven,windows,jetbrains+all,jetbrains+iml
 
 autocenter.sql
+notes.txt
