--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:postgresql://localhost/AutoCenter
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
