Moving TODO concerning multiple classes to one file TODO List. Reformat in application.properties. Removed unused maven dependencies.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,12 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+security.oauth2.resource.filter-order=3
+security.signing-key=MaYzkSjmkzPC57L
+security.security-realm=Auto Center JWT Realm
+security.jwt.client-id=autocenterjwtclientid
+security.jwt.client-secret=XY7kmzoNzl100
+security.jwt.grant-type=password
+security.jwt.scope-read=read
+security.jwt.scope-write=write
+security.jwt.resource-ids=autocenterjwtresourceid
