--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,10 @@ security.signing-key=MaYzkSjmkzPC57L
 security.security-realm=Auto Center JWT Realm
 security.jwt.client-id=autocenterjwtclientid
 security.jwt.client-secret=XY7kmzoNzl100
-security.jwt.grant-type=password
+security.jwt.grant-type-password=password
+security.jwt.grant-type-refresh-token=refresh_token
 security.jwt.scope-read=read
 security.jwt.scope-write=write
 security.jwt.resource-ids=autocenterjwtresourceid
+security.jwt.expire-time=86400
+react.client.url=
