--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,4 @@ security.jwt.scope-read=read
 security.jwt.scope-write=write
 security.jwt.resource-ids=autocenterjwtresourceid
 security.jwt.expire-time=86400
-react.client.url=
+react.client.url=http://localhost:3000
