--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ security.jwt.scope-write=write
 security.jwt.resource-ids=autocenterjwtresourceid
 security.jwt.expire-time=86400
 react.client.url=http://localhost:3000
+server.port=8080
+server.contextPath=/autocenter
