--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/AutoCenter
+spring.datasource.url=jdbc:postgresql://${DB_SERVER}/AutoCenter
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=update
+liquibase.change-log=classpath:/db/changelog/db.changelog-master.yml
+#For Springboot 2.0+ use spring.liquibase.change-log
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.hibernate.ddl-auto=validate
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 security.oauth2.resource.filter-order=3
 security.signing-key=MaYzkSjmkzPC57L
