--- a/.gitignore
+++ b/.gitignore
@@ -175,7 +175,7 @@ $RECYCLE.BIN/
 # End of https://www.gitignore.io/api/java,linux,maven,windows,jetbrains+all,jetbrains+iml
 
 # dependencies
-/node_modules
+node_modules/
 
 # testing
 /coverage
